--- a/.github/workflows/project004.yml
+++ b/.github/workflows/project004.yml
@@ -25,12 +25,12 @@ jobs:
     uses: actions/setup-node@v1.4.2
     with:
       version: 12
-      ke- name: GitHub Action for Yarn
+   - name: GitHub Action for Yarn
     uses: Borales/actions-yarn@v2.1.0
     with:
       # Yarn command
-      cmd: Install
-    - name: build
+      cmd: Install #npm install/ yarn install
+    - name: create build
       run:  yarn build
     - name: installing Surge
       run: npm install -g surge
