--- a/.github/workflows/project004.yml
+++ b/.github/workflows/project004.yml
@@ -20,7 +20,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v-2
       - name: Setup Node.js environment
         uses: actions/setup-node@v2-beta
         with:
@@ -29,7 +29,7 @@ jobs:
         uses: Borales/actions-yarn@v2.1.0
         with:
          # Yarn command
-        cmd: Install #npm install/ yarn install
+         cmd: install #npm install/ yarn install
       - name: create build
         run:  yarn build
       - name: installing Surge
